Closed
Bug 621512
Opened 15 years ago
Closed 15 years ago
JM: jsop_length should use urshift32 instead of rshiftPtr
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | betaN+ |
People
(Reporter: jandem, Assigned: jandem)
References
Details
(Keywords: regression, Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
1.13 KB,
patch
|
sstangl
:
review+
|
Details | Diff | Splinter Review |
Consider this test case:
---
function f() {
var s1 = Array(15000).join('-');
var s2 = Array(9000).join(s1);
s2 = "" + s2;
assertEq(s2.length, 134976001);
}
f();
---
This fails in JM:
test.js:6: Error: Assertion failed: got -133459455, expected 134976001
The problem is that mjit::Compiler::jsop_length uses rshiftPtr instead of urshift32.
| Assignee | ||
Updated•15 years ago
|
Summary: JM: wrong result for jsop_length → JM: jsop_length should use urshift32 instead of rshiftPtr
| Assignee | ||
Comment 1•15 years ago
|
||
This uses urshift32 like we do in generateStringLengthStub (PolyIC.cpp). I did not add the test case because it uses a lot of memory...
Attachment #499825 -
Flags: review?(sstangl)
| Assignee | ||
Updated•15 years ago
|
Keywords: regression
Updated•15 years ago
|
blocking2.0: --- → betaN+
Comment 2•15 years ago
|
||
Comment on attachment 499825 [details] [diff] [review]
Fix
Great find.
Attachment #499825 -
Flags: review?(sstangl) → review+
| Assignee | ||
Updated•15 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 3•15 years ago
|
||
Anybody willing to land this patch? It's a one line change and really safe.
Comment 4•15 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Updated•15 years ago
|
Keywords: checkin-needed
Comment 5•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•