Bug 621512 - JM: jsop_length should use urshift32 instead of rshiftPtr (r=sstangl).